--- a/templates/bucket_with_sns.template.j2
+++ b/templates/bucket_with_sns.template.j2
@@ -8,7 +8,7 @@ Parameters:
   BucketReadAccess:
     Description: list of aws principals that can read from the bucket
     Type: CommaDelimitedList
-    Default: ${AWS::AccountId}
+    Default: {{ (principal_read_access | join(',')) if principal_read_access is defined else '${AWS::AccountId}' }}
 {% if sns_topics is defined %}
   TopicSubscribeAccess:
     Description: list of aws principals that can subscribe to the created topics
