--- a/templates/bucket_with_sns.template.j2
+++ b/templates/bucket_with_sns.template.j2
@@ -6,6 +6,15 @@ Parameters:
     Description: Name of the bucket
     Type: String
 
+  BucketReadAccess:
+    Description: list of aws principals that can read from the bucket
+    Type: CommaDelimitedList
+{% if principal_read_access is defined %}
+    Default: {{ principal_read_access | join(',') }}
+{% else %}
+    Default: ${AWS::AccountId}
+{% endif %}
+
 {% if sns_topics is defined %}
   TopicSubscribeAccess:
     Description: list of aws principals that can read from the bucket
@@ -89,14 +98,7 @@ Resources:
         - Sid: Allow new bucket read
           Effect: Allow
           Principal:
-            AWS:
-{% if principal_read_access is defined %}
-{% for principal in principal_read_access %}
-            - {{ principal }}
-{% endfor %}
-{% else %}
-            - ${AWS::AccountId}
-{% endif %}
+            AWS: !Ref BucketReadAccess
           Action:
           - s3:List*
           - s3:Get*
