--- a/templates/bucket_with_sns.template.j2
+++ b/templates/bucket_with_sns.template.j2
@@ -12,7 +12,7 @@ Parameters:
 {% if principal_read_access is defined %}
     Default: {{ principal_read_access | join(',') }}
 {% else %}
-    Default: ${AWS::AccountId}
+    Default: "*"
 {% endif %}
 
 {% if sns_topics is defined %}
@@ -106,6 +106,25 @@ Resources:
           - !GetAtt NewBucket.Arn
           - !Join ['', [!GetAtt NewBucket.Arn, '/*']]
 
+{% for managed_policy in output_managed_policies or [] %}
+  {{ managed_policy.get('resource_name', managed_policy.name) }}:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      Description: The ability to interact with ${NewBucket}
+      Path: "/"
+      PolicyDocument:
+        Version: 2012-10-17
+        Statement:
+        - Effect: Allow
+          Action:
+{% for policy in managed_policy.policy %}
+          - s3_access_shorthand.get(policy, policy)
+{% endfor %}
+          Resource:
+          - !Sub arn:aws:s3:::${NewBucket}
+          - !Sub arn:aws:s3:::${NewBucket}/*
+{% endfor %}
+
 Outputs:
   BucketName:
     Value: !Ref NewBucket
@@ -120,3 +139,9 @@ Outputs:
 
 {% endfor %}
 {% endif %}
+
+{% for managed_policy in output_managed_policies or [] %}
+  {{  managed_policy.name }}:
+    Value: !Ref {{ managed_policy.get('resource_name', managed_policy.name) }}
+
+{% endfor %}
