--- a/templates/bucket_with_sns.template.j2
+++ b/templates/bucket_with_sns.template.j2
@@ -118,7 +118,7 @@ Resources:
         - Effect: Allow
           Action:
 {% for policy in managed_policy.policy %}
-          - s3_access_shorthand.get(policy, policy)
+          - {{ s3_access_shorthand.get(policy, policy) }}
 {% endfor %}
           Resource:
           - !Sub arn:aws:s3:::${NewBucket}
