--- a/templates/bucket_with_sns.template.j2
+++ b/templates/bucket_with_sns.template.j2
@@ -12,7 +12,7 @@ Parameters:
 {% if principal_read_access is defined %}
     Default: {{ principal_read_access | join(',') }}
 {% else %}
-    Default: !Sub ["${AWS::AccountId}"]
+    Default: !Sub "${AWS::AccountId}"
 {% endif %}
 
 {% if sns_topics is defined %}
