--- a/templates/bucket_with_sns.template.j2
+++ b/templates/bucket_with_sns.template.j2
@@ -9,21 +9,13 @@ Parameters:
   BucketReadAccess:
     Description: list of aws principals that can read from the bucket
     Type: CommaDelimitedList
-{% if principal_read_access is defined %}
-    Default: {{ principal_read_access | join(',') }}
-{% else %}
-    Default: !Sub "${AWS::AccountId}"
-{% endif %}
+    Default: {{ (principal_read_access | join(',')) if principal_read_access is defined else "*" }}
 
 {% if sns_topics is defined %}
   TopicSubscribeAccess:
     Description: list of aws principals that can read from the bucket
     Type: CommaDelimitedList
-{% if sns_topics.principal_subscribe_access is defined %}
-    Default: {{ sns_topics.principal_subscribe_access | join(',') }}
-{% else %}
-    Default: ${AWS::AccountId}
-{% endif %}
+    Default: {{ (sns_topics.principal_subscribe_access | join(',')) if sns_topics.principal_subscribe_access is defined else "*" }}
 {% endif %}
 
 Resources:
@@ -103,8 +95,8 @@ Resources:
           - s3:List*
           - s3:Get*
           Resource:
-          - !GetAtt NewBucket.Arn
-          - !Join ['', [!GetAtt NewBucket.Arn, '/*']]
+          - !Sub arn:aws:s3:::${NewBucket}
+          - !Sub arn:aws:s3:::${NewBucket}/*
 
 {% for managed_policy in output_managed_policies or [] %}
   {{ managed_policy.get('resource_name', managed_policy.name) }}:
@@ -117,9 +109,13 @@ Resources:
         Statement:
         - Effect: Allow
           Action:
+{% if managed_policy.policy == 'full' %}
+          - {{ s3_access_shorthand.get(managed_policy.policy) }}
+{% else %}
 {% for policy in managed_policy.policy %}
           - {{ s3_access_shorthand.get(policy, policy) }}
 {% endfor %}
+{% endif %}
           Resource:
           - !Sub arn:aws:s3:::${NewBucket}
           - !Sub arn:aws:s3:::${NewBucket}/*
