--- a/templates/bucket_with_sns.template.j2
+++ b/templates/bucket_with_sns.template.j2
@@ -9,13 +9,21 @@ Parameters:
   BucketReadAccess:
     Description: list of aws principals that can read from the bucket
     Type: CommaDelimitedList
-    Default: {{ (principal_read_access | join(',')) if principal_read_access is defined else "*" }}
+{% if principal_read_access is defined %}
+    Default: {{ principal_read_access | join(',') }}
+{% else %}
+    Default: "*"
+{% endif %}
 
 {% if sns_topics is defined %}
   TopicSubscribeAccess:
     Description: list of aws principals that can read from the bucket
     Type: CommaDelimitedList
-    Default: {{ (sns_topics.principal_subscribe_access | join(',')) if sns_topics.principal_subscribe_access is defined else "*" }}
+{% if sns_topics.principal_subscribe_access is defined %}
+    Default: {{ sns_topics.principal_subscribe_access | join(',') }}
+{% else %}
+    Default: "*"
+{% endif %}
 {% endif %}
 
 Resources:
@@ -119,6 +127,7 @@ Resources:
           Resource:
           - !Sub arn:aws:s3:::${NewBucket}
           - !Sub arn:aws:s3:::${NewBucket}/*
+
 {% endfor %}
 
 Outputs:
