--- a/templates/lambda.template.j2
+++ b/templates/lambda.template.j2
@@ -40,8 +40,10 @@ Resources:
 {% if description is defined %}
       Description: {{ description }}
 {% endif %}
+{% if environment_configuration.variables is defined %}
       Environment:
         Variables: {{ environment_configuration.variables }}
+{% endif %}
       Code:
 {% if code.zip_file is defined %}
         ZipFile: {{ code.zip_file }}
@@ -83,6 +85,7 @@ Resources:
   "{{ alarm_topic.get('resource_name', 'name') }}":
     Type: AWS::SNS::Topic
     Properties":
+      DisplayName: {{ alarm_topic.get('name', loop.index0) }}
       Subscription":
 {% for subscription in alarm_topic.subscriptions %}
       - Endpoint: {{ subscription.endpoint }}
