--- a/lambda/cloudformation/lambda.template.j2
+++ b/lambda/cloudformation/lambda.template.j2
@@ -44,7 +44,7 @@ Conditions:
 
   HasSchedule: !Not [!Equals [!Ref ScheduleExpression, '']]
 
-  HasEventSource: !Not [!Equals [!Ref EventSournceArn, '']]
+  HasEventSource: !Not [!Equals [!Ref EventSourceArn, '']]
 
 
 Resources:
