--- a/queue/cloudformation/queue.template.j2
+++ b/queue/cloudformation/queue.template.j2
@@ -13,16 +13,6 @@ Parameters:
     Type: Number
     Default: 60
 
-  FifoQueue:
-    Type: String
-    AllowedValues: [true, false]
-    Default: false
-
-  ContentBasedDeduplication:
-    Type: String
-    AllowedValues: [true, false]
-    Default: false
-
   MessageDelaySeconds:
     Type: Number
     Default: -1
@@ -75,8 +65,6 @@ Resources:
         - HasMessageDelaySeconds
         - !Ref MessageDelaySeconds
         - !Ref AWS::NoValue
-      FifoQueue: !Ref FifoQueue
-      ContentBasedDeduplication: !Ref ContentBasedDeduplication
       ReceiveMessageWaitTimeSeconds:
         !If
         - HasReceiveWaitTime
@@ -135,3 +123,18 @@ Outputs:
   QueueName:
     Description: name of the queue
     Value: !GetAtt NewQueue.QueueName
+
+  DeadLetterQueueUrl:
+    Condition: HasRedrivePolicy
+    Description: url of dead letter queue
+    Value: !Ref DeadLetterQueue
+
+  DeadLetterQueueArn:
+    Condition: HasRedrivePolicy
+    Description: arn of the dead letter queue
+    Value: !GetAtt DeadLetterQueue.Arn
+
+  DeadLetterQueueName:
+    Condition: HasRedrivePolicy
+    Description: name of the dead letter queue
+    Value: !GetAtt DeadLetterQueue.QueueName
